--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,18 +1,18 @@
 @font-face {
-  font-family: OpenSansBold;
+  font-family: OpenSans;
   src: url('assets/fonts/opensans-bold-webfont.woff2') format('woff2'),
        url('assets/fonts/opensans-bold-webfont.woff') format('woff');
-  font-weight: normal;
+  font-weight: 700;
   font-style: normal;
 
 }
 
 @font-face {
-  font-family: OpenSansLight;
-  src: url('assets/fonts/opensans-light-webfont.woff2') format('woff2'),
-       url('assets/fonts/opensans-light-webfont.woff') format('woff');
+  font-family: OpenSans;
+  src: url('assets/fonts/opensans-semibold-webfont.woff2') format('woff2'),
+       url('assets/fonts/opensans-semibold-webfont.woff2') format('woff');
   font-weight: normal;
-  font-style: normal;
+  font-style: 600;
 
 }
 
@@ -20,12 +20,20 @@
   font-family: OpenSans;
   src: url('assets/fonts/opensans-regular-webfont.woff2') format('woff2'),
        url('assets/fonts/opensans-regular-webfont.woff') format('woff');
-  font-weight: normal;
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: OpenSans;
+  src: url('assets/fonts/opensans-light-webfont.woff2') format('woff2'),
+       url('assets/fonts/opensans-light-webfont.woff') format('woff');
+  font-weight: 300;
   font-style: normal;
 }
 
 body {
-  font-family: OpenSans, sans-serif;
+  font: 400 1em OpenSans, sans-serif;
 }
 
 ul {
