--- a/src/app/App.css
+++ b/src/app/App.css
@@ -11,9 +11,8 @@
   font-family: OpenSans;
   src: url('assets/fonts/opensans-semibold-webfont.woff2') format('woff2'),
        url('assets/fonts/opensans-semibold-webfont.woff2') format('woff');
-  font-weight: normal;
-  font-style: 600;
-
+  font-weight: 600;
+  font-style: normal;
 }
 
 @font-face {
@@ -32,6 +31,39 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'icomoon';
+  src:  url('assets/fonts/icomoon.eot?ll0s0h');
+  src:  url('assets/fonts/icomoon.eot?ll0s0h#iefix') format('embedded-opentype'),
+        url('assets/fonts/icomoon.ttf?ll0s0h') format('truetype'),
+        url('assets/fonts/icomoon.woff?ll0s0h') format('woff'),
+        url('assets/fonts/icomoon.svg?ll0s0h#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font       Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-add:before {
+  content: "\e901";
+}
+.icon-close:before {
+  content: "\e900";
+}
+
 body {
   font: 400 1em OpenSans, sans-serif;
 }
@@ -43,4 +75,12 @@ ul {
 a {
   color: #000;
   text-decoration: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
+
+.ReactModal__Body--open {
+  overflow: hidden;
 }
