--- a/src/app/App.css
+++ b/src/app/App.css
@@ -33,11 +33,11 @@
 
 @font-face {
   font-family: 'icomoon';
-  src:  url('assets/fonts/icomoon.eot?ll0s0h');
-  src:  url('assets/fonts/icomoon.eot?ll0s0h#iefix') format('embedded-opentype'),
-        url('assets/fonts/icomoon.ttf?ll0s0h') format('truetype'),
-        url('assets/fonts/icomoon.woff?ll0s0h') format('woff'),
-        url('assets/fonts/icomoon.svg?ll0s0h#icomoon') format('svg');
+  src:  url('assets/fonts/icomoon/icomoon.eot?6piewi');
+  src:  url('assets/fonts/icomoon/icomoon.eot?6piewi#iefix') format('embedded-opentype'),
+        url('assets/fonts/icomoon/icomoon.ttf?6piewi') format('truetype'),
+        url('assets/fonts/icomoon/icomoon.woff?6piewi') format('woff'),
+        url('assets/fonts/icomoon/icomoon.svg?6piewi#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -52,16 +52,25 @@
   text-transform: none;
   line-height: 1;
 
-  /* Better Font       Rendering =========== */
+  /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-add:before {
+.icon-plus:before {
   content: "\e901";
 }
 .icon-close:before {
   content: "\e900";
+}
+.icon-pencil:before {
+  content: "\e905";
+}
+.icon-bin:before {
+  content: "\e9ac";
+}
+.icon-eye:before {
+  content: "\e9ce";
 }
 
 body {
@@ -77,8 +86,9 @@ a {
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, ul, ol {
   margin: 0;
+  padding: 0;
 }
 
 .ReactModal__Body--open {
